--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
     <head>
     </head>
     <body>
-        <h1> introduce myself </h1>
+      
         <img src= "image.jpg" alt= "pic" width= "150" height="200" >
-        <p> </P>
+          <h2> Eyerusalem Hadgu </h2>
+        
+       <ul>
+            <li>W1D1- this homepage </li>
+           <li> W1D2 -About Me</li>
+           <li> W1D3- Recipe</li>
+           <li>W1D4- Movie Review </li>
+           <li> W1D5- MP3 Library</li>
+           <li> W1D6- MOvie Review PHP</li>
+        </ul>
     </body>
     </html>
 
