--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title><title/>
+     </head>
+        
     <body>
       <img src= "image.jpg" alt= "pic" width= "150" height="200" >
           <h2> Eyerusalem Hadgu </h2>
@@ -11,8 +15,10 @@
            <li> W1D5- MP3 Library</li>
            <li> W1D6- MOvie Review PHP</li>
         </ul>
-    </body>
-  </html>
- <a href="https://validator.w3.org/nu/?doc=<url of your page>">
+         <a href="https://validator.w3.org/nu/?doc=<url of your page>">
  <img src="https://manalabs.org/img/w3c-html.png" />
    </a>
+    </body>
+        
+  </html>
+
