--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title><title/>
+        <title>Welcome to my webpage<title/>
      </head>
         
     <body>
