--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome to my webpage<title/>
+        <title>Welcome to my webpage</title>
      </head>
         
     <body>
@@ -15,10 +15,10 @@
            <li> W1D5- MP3 Library</li>
            <li> W1D6- MOvie Review PHP</li>
         </ul>
-        
-    </body>
-         <a href="https://validator.w3.org/nu/?doc=<url of your page>">
+               <a href="https://validator.w3.org/nu/?doc=<url of your page>">
  <img src="https://manalabs.org/img/w3c-html.png" />
    </a>
+    </body>
+  
   </html>
 
