--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Welcome to my webpage</title>
      </head>
@@ -15,8 +15,8 @@
            <li> W1D5- MP3 Library</li>
            <li> W1D6- MOvie Review PHP</li>
         </ul>
-               <a href="https://validator.w3.org/nu/?doc=<url of your page>">
- <img src="https://manalabs.org/img/w3c-html.png" />
+               <a href="https://validator.w3.org/nu/?doc=<https://eyerus21.github.io/>">
+ <img src="https://manalabs.org/img/w3c-html.png" alt="image">
    </a>
     </body>
   
