--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <li> W1D5- MP3 Library</li>
            <li> W1D6- MOvie Review PHP</li>
         </ul>
-               <a href="https://validator.w3.org/nu/?doc=<https://eyerus21.github.io/>">
+               <a href="https://validator.w3.org/nu/?doc=<https://eyerus21.github.io>">
  <img src="https://manalabs.org/img/w3c-html.png" alt="image">
    </a>
     </body>
