--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
            <li> W1D5- MP3 Library</li>
            <li> W1D6- MOvie Review PHP</li>
         </ul>
-               <a href="https://validator.w3.org/nu/?doc=https://eyerus21.github.io">
- <img src="https://manalabs.org/img/w3c-html.png" alt="image">
+               <a href="https://validator.w3.org/check/referer">
+ <img src="https://manalabs.org/img/w3c-html.png" alt="validate">
    </a>
     </body>
   
