--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>About Me</title>
-        <link rel="stylesheet" href="styleMe.css">
+        <link rel="stylesheet" href="styleme.css">
     </head>
     
     <body>
