--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           <h2> Eyerusalem Hadgu </h2>
         <ul>
             <li>W1D1- this homepage </li>
-           <li> <a href ="https://github.com/eyerus21/eyerus21.github.io/blob/main/aboutme.html"> W1D2 -About Me</a></li>
+           <li> <a href ="aboutme.html"> W1D2 -About Me</a></li>
            <li> W1D3- Recipe</li>
            <li>W1D4- Movie Review </li>
            <li> W1D5- MP3 Library</li>
