--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>About Me</title>
-        <link rel="stylesheet" href="styleme.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     
     <body>
