--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li>W1D1- this homepage </li>
            <li> <a href ="./assignment2/index.html"> W1D2 -About Me</a></li>
-           <li> W1D3- Recipe</li>
+           <li> <a href ="./assignment3/index.html"> W1D3- Recipe</a></li>
            <li>W1D4- Movie Review </li>
            <li> W1D5- MP3 Library</li>
            <li> W1D6- MOvie Review PHP</li>
