--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li>W1D1- this homepage </li>
            <li> <a href ="./assignment2/index.html"> W1D2 -About Me</a></li>
            <li> <a href ="./assignment3/index.html"> W1D3- Recipe</a></li>
-           <li>W1D4- Movie Review </li>
+           <li><a href ="./assignment4/index.html">W1D4- Movie Review</a> </li>
            <li> W1D5- MP3 Library</li>
            <li> W1D6- MOvie Review PHP</li>
         </ul>
