--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -196,7 +196,7 @@
                         <dt>LINKS</dt>
                                 <dd><a href="#">The Official TMNT Site</a></dd>
                                 <dd><a href="#">RT Review</a></dd>
-                                <dd><a href="#">RT Home</a></dd>
+                                <dd><a href="https://eyerus21.github.io/">RT Home</a></dd>
                                 <dd><a href="#">CSE 190 M</a></dd>
                     </dl>
                 </div>
