html and css bootstrap update

--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="responsiveDesign.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <title>Responsive Design</title>
 </head>
 
@@ -12,8 +12,8 @@
 
         <div class="flex-menu-container">
         <div>Menu1</div>
-        <div>Menu1</div>
-        <div>Menu1</div>
+        <div>Menu2</div>
+        <div>Menu3</div>
         </div>
         <div class="flex-column-container">
             <div id="column1">Column1</div> 
