--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
            <li> <a href ="./assignment2/index.html"> W1D2 -About Me</a></li>
            <li> <a href ="./assignment3/index.html"> W1D3- Recipe</a></li>
            <li><a href ="./assignment4/index.html">W1D4- Movie Review</a> </li>
-           <li> W1D5- MP3 Library</li>
-           <li> W1D6- MOvie Review PHP</li>
-        </ul>
+           <li><a href ="./assignment5/index.html">W1D5-Responsive Design</a> </li>
+           <li> <a href ="./assignment6/index.html">W1D5- Bootstrap Design</a></li>
+        
+          </ul>
                <a href="https://validator.w3.org/check/referer">
  <img src="https://manalabs.org/img/w3c-html.png" alt="validate">
    </a>
