--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -7,7 +7,7 @@
     <title>Bootsrap</title>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="bootsrap.css">
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container-fluid">
