--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
            <li><a href ="./assignment5/index.html">W1D5-Responsive Design</a> </li>
            <li> <a href ="./assignment6/index.html">W1D5- Bootstrap Design</a></li>
            <li> <a href ="./assignment7/index.html">W1D6- JS </a></li>
+           <li> <a href ="./assignment8/index.html">JS Animation </a></li>
           </ul>
                <a href="https://validator.w3.org/check/referer">
  <img src="https://manalabs.org/img/w3c-html.png" alt="validate">
