--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
            <li> <a href ="./assignment6/index.html">W1D5- Bootstrap Design</a></li>
            <li> <a href ="./assignment7/index.html">W1D6- JS</a></li>
            <li> <a href ="./assignment8/index.html" class="links">JS Animation</a></li 
+           <li> <a href ="./assignment9/index.html" class="links">Functional Programming</a></li 
+           <li> <a href ="./assignment9/dome.html" class="links">Dome Market</a></li 
           </ul>
                <a href="https://validator.w3.org/check/referer">
  <img src="https://manalabs.org/img/w3c-html.png" alt="validate">
