--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li> <a href ="./assignment8/index.html">JS Animation</a></li> 
             <li> <a href ="./assignment9/index.html">Functional Programming</a></li> 
             <li> <a href ="./assignment9/dome.html">Dome Market</a></li> 
+            <li> <a href ="./assignment10/index.html"> Inheritance </a></li> 
          
           </ul>
                <a href="https://validator.w3.org/check/referer">
