--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li> <a href ="./assignment9/index.html">Functional Programming</a></li> 
             <li> <a href ="./assignment9/dome.html">Dome Market</a></li> 
             <li> <a href ="./assignment10/index.html"> Inheritance </a></li> 
+            <li> <a href ="./assignment11/index.html">Javascript Class</a></li> 
          
           </ul>
                <a href="https://validator.w3.org/check/referer">
