--- a/assignment11/index.html
+++ b/assignment11/index.html
@@ -12,9 +12,9 @@
         // initialize mocha
         mocha.setup('bdd');
     </script>
-    <script src="Accounts.js"></script>
-    <script src="SavingAccounts.js"></script>
-    <script src="CheckingAccounts.js"></script>
+    <script src="Account.js"></script>
+    <script src="SavingAccount.js"></script>
+    <script src="ChekingAccount.js"></script>
     <script src="Bank.js"></script>
     <script src="test.js"></script>
 </head>
