--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li> <a href ="./assignment9/dome.html">Dome Market</a></li> 
             <li> <a href ="./assignment10/index.html"> Inheritance </a></li> 
             <li> <a href ="./assignment11/index.html">Javascript Class</a></li> 
-         
+            <li> <a href ="./assignment12/index.html">JQuery</a></li> 
           </ul>
                <a href="https://validator.w3.org/check/referer">
  <img src="https://manalabs.org/img/w3c-html.png" alt="validate">
