initial commit on assignment13

--- a/assignment12/index.html
+++ b/assignment12/index.html
@@ -23,7 +23,7 @@
         <div id="item4">
             <input type="number" name="growthAmountTF" step="1">
         </div>
-        <div id="item5"><label>Growth rate</label></div>
+        <div id="item5"><label>Growth rategiyt </label></div>
         <div id="item6">
             <input type="number" name="timeIntervalTF" step="1">
         </div>
