--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li> <a href ="./assignment10/index.html"> Inheritance </a></li> 
             <li> <a href ="./assignment11/index.html">Javascript Class</a></li> 
             <li> <a href ="./assignment12/index.html">JQuery</a></li> 
+            <li> <a href ="./assignment13/index.html">Maze Game</a></li> 
           </ul>
                <a href="https://validator.w3.org/check/referer">
  <img src="https://manalabs.org/img/w3c-html.png" alt="validate">
